# Modern-CPP-Project

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/: catch2.cmake
tests/: CMakeLists.txt  modern_cpp_tests.cpp
